# openaxis

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CLEAN_SLATE_READY.md  CONTRIBUTING.md  CORRECTED_WORKFLOW.md  QUICKSTART.md  README.md  SESSION_START_ROBOT_FOCUS.md  mkdocs.yml  openaxis-setup-summary.md  pyproject.toml  pytest.ini  setup.bat  start-ui-only.bat  start.bat  stop.bat
.claude/commands/: add-process.md  catchup.md  implement-feature.md  review.md  run-tests.md
.github/workflows/: ci.yml
config/materials/: README.md
config/processes/: waam_steel.yaml
config/robots/: abb_irb6700.yaml
config/tools/: milling_6mm_flat.yaml  pellet_extruder.yaml  waam_torch.yaml
config/urdf/: abb_irb6700.urdf
config/urdf/tools/: extruder.urdf  milling_tool.urdf
docs/: AGENT_HANDOVER_PLAN.md  BENCHMARKS.md  DEVELOPMENT.md  FORENSIC_AUDIT_REPORT.md  IMPLEMENTATION_REVIEW_FEEDBACK.md  INTEGRATION_STATUS.md  KANBAN.md  PHASE_BRIDGE_PLAN.md  RESEARCH_BRIEF_UI_WORKFLOW.md  RESEARCH_OUTPUT_UI_WORKFLOW.md  ROADMAP.md  SENIOR_PM_REVIEW.md  TESTING_GUIDE.md  UNGROUNDED_CODE.md  VERIFICATION_ENGINE.md  plan.md
docs/architecture/: system-architecture.md
docs/archive/: REFOCUSED_PRIORITIES.md
docs/user-guide/: installation.md  ornl-slicer-setup.md  quickstart.md  troubleshooting.md
examples/: cube_toolpath.gcode  demo_cube.stl  demo_robot.py  demo_simulation_toolpath.py  demo_slicing.py  test_geometry_demo.py  test_simulation_basic.py  transformed_cube.stl  visualize_geometry.py  visualize_toolpath.py
scripts/: build_backend.py  diagnose_system.py  setup_dev.sh  start_backend.py
src/backend/: __init__.py  geometry_service.py  material_service.py  mesh_service.py  postprocessor_service.py  robot_service.py  server.py  simulation_service.py  toolpath_editor_service.py  toolpath_service.py  validation_service.py  workframe_service.py
src/openaxis/: __init__.py  cli.py  pipeline.py
src/openaxis/core/: __init__.py  config.py  exceptions.py  geometry.py  logging.py  materials.py  plugin.py  project.py  robot.py
src/openaxis/geometry/: __init__.py  mesh_operations.py
src/openaxis/hardware/: __init__.py
src/openaxis/motion/: __init__.py  collision.py  external_axes.py  kinematics.py  planner.py
src/openaxis/postprocessor/: __init__.py  base.py  fanuc.py  gcode_configurable.py  krl.py  rapid.py
src/openaxis/processes/: __init__.py  base.py  milling.py  pellet.py  waam.py
src/openaxis/simulation/: __init__.py  environment.py
src/openaxis/slicing/: __init__.py  angled_slicer.py  contour_offset.py  curve_slicer.py  engage_disengage.py  gcode.py  infill_patterns.py  milling_toolpath.py  ornl_slicer.py  planar_slicer.py  radial_slicer.py  revolved_slicer.py  seam_control.py  slicer_factory.py  support_generation.py  toolpath.py
src/ui/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/ui/electron/: main.js  preload.js
src/ui/public/: test-robot.html
src/ui/src/: App.tsx  index.css
src/ui/src/api/: client.ts  geometry.ts  index.ts  pipeline.ts  robot.ts  simulation.ts  toolpath.ts
src/ui/src/components/: AdvancedSlicingPanel.tsx  AnalyticsPanel.tsx  BuildPlate.tsx  DepositionVisualization.tsx  ErrorBoundary.tsx  InfillPatternPreview.tsx  LayerControls.tsx  Layout.tsx  Layout.tsx.backup  MeshOperationsPanel.tsx  (+14 more)
test-geometry/: ADAXIS_20240729_Nozzle.step  ADAXIS_20240729_Nozzle.stl  CurvedPipe_20240723_v1.step  Manifold_01092022_v1.step  Propeller_01092022_v1.step  Wing_Mold_01092022_v1.step  Wing_Mold_01092022_v1.stl
tests/: conftest.py  test_quality_suite.py
tests/benchmarks/: bench_ik.py
tests/fixtures/: README.md
tests/integration/: __init__.py  test_ik_integration.py  test_ik_verification.py  test_ornl_mock_slicing.py  test_ornl_slicer.py  test_pbi_integration.py  test_pipeline_liveness.py
tests/unit/: test_pipeline.py  test_postprocessor.py  test_postprocessor_service.py
tests/unit/backend/: conftest.py  test_api_contracts.py  test_geometry_endpoints.py  test_health.py  test_material_endpoints.py  test_postprocessor_endpoints.py  test_robot_endpoints.py  test_simulation_endpoints.py  test_toolpath_endpoints.py  test_workframe_endpoints.py
tests/unit/core/: test_config.py  test_geometry.py  test_project.py  test_robot.py
tests/unit/slicing/: test_gcode.py  test_milling_toolpath.py  test_planar_slicer.py  test_support_generation.py  test_toolpath.py
tests/verification/: __init__.py  coordinate_oracle.py
(+43 files in other folders)
